# bevy-jam-5

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/: registry.json
assets/animation_graph/: player.animgraph.ron
assets/blueprints/: ActivityLightBlueprint.glb  navmesh_collection.glb  the_cube.001.glb  washing_machine.glb
assets/custom_materials/: item_pickup.wgsl  tile_floor.wgsl
assets/levels/: level-001.glb  level-001.meta.ron  level-002.glb  level-002.meta.ron
assets/materials/: ActivityLightMaterial.glb  Dots Stroke.glb  Material.001.glb  Material.002.glb  Material.003.glb  Material.glb  Neon Plexi Pink by LP.glb  Wall.glb  colormap.002.glb  slate-400.glb  test_scenes_materials.glb  water.glb
assets/mini_characters_1/: character-male-a.gltf
src/: animation_graph_processing.rs  assets.rs  blenvy_helpers.rs  camera.rs  collision_layers.rs  controls.rs  custom_materials.rs  customer_npc.rs  game_scene.rs  grid.rs  inventory.rs  leafwing_test.rs  lib.rs  main.rs  main_menu.rs  navmesh.rs  persistent_id.rs  states.rs  widgets.rs
src/custom_materials/: tile_floor.rs
src/game_scene/: game_menu.rs  tnua_animation.rs
src/widgets/: inventory_modal.rs  inventory_modal_base.rs  main_menu_button.rs  modal.rs  timer_transition.rs  two_timer_transition.rs
