[package]
name = "wash-cycle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy-inspector-egui = "0.25.1"
bevy_asset_loader = { version = "0.21.0", features = ["progress_tracking"] }
bevy_kira_audio = "0.20.0"
iyes_progress = { version = "0.12.0", features = ["bevy_asset"] }
leafwing-input-manager = "0.14.0"
vleue_kinetoscope = "0.2.0"
# woodpecker_ui = { git = "ssh://git@github.com/StarArawn/woodpecker_ui.git" }
woodpecker_ui = { path = "../../stararawn/woodpecker_ui" }
bevy_mod_picking = "0.20"
taffy = "0.5"
bevy-tnua = "0.19.0"
bevy-tnua-avian3d = "0.1.0"
avian3d = { version = "0.1.1", features = ["collider-from-mesh"] }
blenvy = { git = "https://github.com/kaosat-dev/Blenvy.git", branch = "blenvy" }
bevy_vello = "0.5.0"
interpolation = "0.2"

[features]
default = ["dev"]
dev = []
long_loading = []
with_main_menu = []

[patch.crates-io]
bevy_mod_picking = { git = "https://github.com/StarArawn/bevy_mod_picking", branch = "main" }
bevy_eventlistener = { git = "https://github.com/StarArawn/bevy_eventlistener", branch = "main" }
