[package]
name = "wash-cycle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "sysinfo_plugin",
] }
bevy-inspector-egui = { version = "0.25.1", optional = true }
bevy_asset_loader = { version = "0.21.0", features = ["progress_tracking"] }
bevy_kira_audio = "0.20.0"
iyes_progress = { version = "0.12.0", features = ["bevy_asset"] }
leafwing-input-manager = "0.14.0"
vleue_kinetoscope = "0.2.0"
woodpecker_ui = { git = "ssh://git@github.com/ChristopherBiscardi/woodpecker_ui.git", branch = "main" }
# woodpecker_ui = { path = "../../stararawn/woodpecker_ui" }
# woodpecker_ui = { path = "./woodpecker_ui" }
bevy_mod_picking = "0.20"
taffy = "0.5"
bevy-tnua = "0.19.0"
bevy-tnua-avian3d = "0.1.0"
avian3d = { version = "0.1.1", features = ["collider-from-mesh"] }
blenvy = { git = "https://github.com/kaosat-dev/Blenvy.git", branch = "blenvy" }
# blenvy = { path = "../../kaosat-dev/Blenvy/crates/blenvy" }
bevy_vello = "0.5.0"
interpolation = "0.2"
# vleue_navigator = { version = "0.8.0", features = ["debug-with-gizmos"] }
vleue_navigator = { path = "../../vleue/vleue_navigator", features = [
    "debug-with-gizmos",
    "avian3d",
] }
rand = "0.8.5"
geo = "0.28.0"


[features]
default = ["dev"]
dev = ["dep:bevy-inspector-egui"]
long_loading = []
with_main_menu = []
spawn_sacrifice = []


[patch.crates-io]
bevy_mod_picking = { git = "https://github.com/StarArawn/bevy_mod_picking", branch = "main" }
bevy_eventlistener = { git = "https://github.com/StarArawn/bevy_eventlistener", branch = "main" }

[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"
